# pre-commit-gradle

./: .pre-commit-hooks.yaml  CHANGELOG.md  pyproject.toml
pre_commit_hooks/: main.py  util.py
tests/: util_test.py
